--- a/src/Bundle/PlayWithElasticSearchBundle/Resources/views/Track/search-tracks.html.twig
+++ b/src/Bundle/PlayWithElasticSearchBundle/Resources/views/Track/search-tracks.html.twig
@@ -9,8 +9,8 @@
 
     <form class="form-inline">
         <div class="form-group">
-            <label for="exampleInputName2">Playlist name</label>
-            <input type="text" class="form-control" id="playlist_name" name="playlist_name" value="{{ playlist_name }}" placeholder="Movies, Audiobooks...">
+            <label for="exampleInputName2">Album title</label>
+            <input type="text" class="form-control" id="album_title" name="album_title" value="{{ album_title }}" placeholder="Acústico, Jagged little pill...">
         </div>
         <div class="form-group">
             <label for="exampleInputEmail2">With Track</label>
